eerepr/static/css/style.css
/* 
This file was modified from the xarray stylesheet, which is licensed under the
Apache License, Version 2.0 (the "License").

https://github.com/pydata/xarray/blob/main/xarray/static/css/style.css
*/

:root {
  --font-color-primary: var(--jp-content-font-color0, rgba(0, 0, 0, 1));
  --font-color-secondary: var(--jp-content-font-color2, rgba(0, 0, 0, 0.6));
  --font-color-accent: rgba(123, 31, 162, 1);
  --border-color: var(--jp-border-color2, #e0e0e0);
  --background-color: var(--jp-layout-color0, white);
  --background-color-row-even: var(--jp-layout-color1, white);
  --background-color-row-odd: var(--jp-layout-color2, #eeeeee);
}

html[theme="dark"],
body[data-theme="dark"],
body.vscode-dark {
  --font-color-primary: rgba(255, 255, 255, 1);
  --font-color-secondary: rgba(255, 255, 255, 0.6);
  --font-color-accent: rgb(173, 132, 190);
  --border-color: #2e2e2e;
  --background-color: #111111;
  --background-color-row-even: #111111;
  --background-color-row-odd: #313131;
}

.eerepr {
  padding: 1em;
  line-height: 1.5em;
  min-width: 300px;
  max-width: 1200px;
  overflow-y: scroll;
  max-height: 600px;
  border: 1px solid var(--border-color);
  font-family: monospace;
}

.eerepr li {
  list-style-type: none;
}

.eerepr ul {
  padding-left: 1.5em !important;
  margin: 0;
}

/* Prevent indenting on the root node */
.eerepr > ul {
  padding-left: 0 !important;
}

.eerepr-header {
  color: var(--font-color-secondary);
  cursor: pointer;
  margin: 0;
}

.eerepr-header:hover {
  color: var(--font-color-primary);
}

.eerepr-key {
  color: var(--font-color-accent);
  margin-right: 6px;
}

.eerepr-val {
  color: var(--font-color-primary);
}

.eerepr-collapser {
  display: none;
}

/* Hide by default */
.eerepr-list {
  display: none;
}

/* Reveal when expanded */
.eerepr-collapser:checked + .eerepr-header + .eerepr-list {
  display: block;
}

.eerepr-header::before {
  display: inline-block;
  content: "▼";
  margin-right: 6px;
  transform: rotate(-90deg);
  transition: transform 0.2s;
}

.eerepr-collapser:checked + .eerepr-header::before {
  transform: rotate(0deg);
}

